--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,9 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 upload_port = /dev/serial/by-id/usb-Silicon_Labs_CP2102_USB_to_UART_Bridge_Controller_0001-if00-port0
+monitor_port = /dev/serial/by-id/usb-Silicon_Labs_CP2102_USB_to_UART_Bridge_Controller_0001-if00-port0
+monitor_speed = 9600
+; monitor_filters = log2file, time, default
 lib_deps =
 	Somfy_Remote=https://github.com/jeffkowalski/Somfy_Remote
 	ESP Async WebServer
