Update deps, be more defensive/verbose in program

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,10 @@ upload_port = /dev/serial/by-id/usb-Silicon_Labs_CP2102_USB_to_UART_Bridge_Contr
 monitor_port = /dev/serial/by-id/usb-Silicon_Labs_CP2102_USB_to_UART_Bridge_Controller_0001-if00-port0
 monitor_speed = 9600
 ; monitor_filters = log2file, time, default
+lib_compat_mode = strict
+lib_ldf_mode = chain
 lib_deps =
 	Somfy_Remote=https://github.com/jeffkowalski/Somfy_Remote
-	ESP Async WebServer
+	arduino-libraries/WiFi@^1.2.7
 	ESPAsyncUDP
+    ESP32Async/ESPAsyncWebServer
