--- a/platformio.ini
+++ b/platformio.ini
@@ -1,4 +1,4 @@
-;PlatformIO Project Configuration File
+; PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
 ;   Upload options: custom upload port, speed and extra flags
@@ -8,18 +8,21 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+; PlatformIO Project Configuration File
+
 [env:esp12e]
 platform = espressif8266
 board = esp12e
 framework = arduino
+
+; Serial config (optional if auto-detected)
 upload_port = /dev/serial/by-id/usb-Silicon_Labs_CP2102_USB_to_UART_Bridge_Controller_0001-if00-port0
 monitor_port = /dev/serial/by-id/usb-Silicon_Labs_CP2102_USB_to_UART_Bridge_Controller_0001-if00-port0
 monitor_speed = 9600
-; monitor_filters = log2file, time, default
-lib_compat_mode = strict
-lib_ldf_mode = chain
+
+; Library Dependency Management
 lib_deps =
-	Somfy_Remote=https://github.com/jeffkowalski/Somfy_Remote
-	arduino-libraries/WiFi@^1.2.7
-	ESPAsyncUDP
-    ESP32Async/ESPAsyncWebServer
+  Somfy_Remote=https://github.com/jeffkowalski/Somfy_Remote.git#master
+  arduino-libraries/WiFi@^1.2.7
+  ESPAsyncUDP
+  ESP32Async/ESPAsyncWebServer
